--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="Mats.cpp" />
     <ClCompile Include="ModelTexture.cpp" />
     <ClCompile Include="objLoader.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="RawModel.cpp" />
     <ClCompile Include="RenderMaster.cpp" />
     <ClCompile Include="Rendrer.cpp" />
@@ -35,6 +36,7 @@
     <ClCompile Include="terrain.cpp" />
     <ClCompile Include="TerrainRenderer.cpp" />
     <ClCompile Include="TerrainShader.cpp" />
+    <ClCompile Include="TerrainTexturePack.cpp" />
     <ClCompile Include="textureModel.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -46,6 +48,7 @@
     <ClInclude Include="Mats.h" />
     <ClInclude Include="ModelTexture.h" />
     <ClInclude Include="objLoader.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="RawModel.h" />
     <ClInclude Include="RenderMaster.h" />
     <ClInclude Include="Rendrer.h" />
@@ -55,6 +58,8 @@
     <ClInclude Include="terrain.h" />
     <ClInclude Include="TerrainRenderer.h" />
     <ClInclude Include="TerrainShader.h" />
+    <ClInclude Include="TerrainTexture.h" />
+    <ClInclude Include="TerrainTexturePack.h" />
     <ClInclude Include="textureModel.h" />
   </ItemGroup>
   <ItemGroup>
