--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -167,12 +167,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\GameEngine CPP\GameEngine\GameEngine\bin\SDL2\include;D:\GameEngine CPP\GameEngine\GameEngine\bin\SDL2_image\include;$(ProjectDir)\bin\glew\include;$(ProjectDir)\bin\Soil\include;$(ProjectDir)\bin\glfw\include;$(ProjectDir)\bin\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\bin\SDL2\include;$(ProjectDir)\bin\SDL2_image\include;$(ProjectDir)\bin\glew\include;$(ProjectDir)\bin\Soil\include;$(ProjectDir)\bin\glfw\include;$(ProjectDir)\bin\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\GameEngine CPP\GameEngine\GameEngine\bin\SDL2\lib\x86;D:\GameEngine CPP\GameEngine\GameEngine\bin\SDL2_image\lib\x86;$(ProjectDir)\bin\glew\lib\Release\Win32;$(ProjectDir)\bin\Soil\lib;$(ProjectDir)\bin\glfw\lib-vc2015;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)\bin\SDL2\lib\x86;$(ProjectDir)\bin\SDL2_image\lib\x86;$(ProjectDir)\bin\glew\lib\Release\Win32;$(ProjectDir)\bin\Soil\lib;$(ProjectDir)\bin\glfw\lib-vc2015;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SOIL.lib;opengl32.lib;glew32.lib;glfw3.lib;SDL2.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -198,14 +198,14 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\GameEngine CPP\GameEngine\GameEngine\bin\SDL2\include;D:\GameEngine CPP\GameEngine\GameEngine\bin\SDL2_image\include;$(ProjectDir)\bin\glew\include;$(ProjectDir)\bin\Soil\include;$(ProjectDir)\bin\glfw\include;$(ProjectDir)\bin\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\bin\SDL2\include;$(ProjectDir)\bin\SDL2_image\include;$(ProjectDir)\bin\glew\include;$(ProjectDir)\bin\Soil\include;$(ProjectDir)\bin\glfw\include;$(ProjectDir)\bin\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\GameEngine CPP\GameEngine\GameEngine\bin\SDL2\lib\x86;D:\GameEngine CPP\GameEngine\GameEngine\bin\SDL2_image\lib\x86;$(ProjectDir)\bin\glew\lib\Release\Win32;$(ProjectDir)\bin\Soil\lib;$(ProjectDir)\bin\glfw\lib-vc2015;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)\bin\SDL2\lib\x86;$(ProjectDir)\bin\SDL2_image\lib\x86;$(ProjectDir)\bin\glew\lib\Release\Win32;$(ProjectDir)\bin\Soil\lib;$(ProjectDir)\bin\glfw\lib-vc2015;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SOIL.lib;opengl32.lib;glew32.lib;glfw3.lib;SDL2.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
